layout modification and new sidebar

--- a/index.html
+++ b/index.html
@@ -3,110 +3,71 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compartible" content="IE-edge">
+    <meta http-equiv="X-UA-Compartible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies+</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&family=Teko:wght@500&display=swap"
-        rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>Movies+</title>
 </head>
 
 <body>
-    <nav>
-        <div class="nav">
-            <img src="movies-assets/movies-logo.png" alt="" class="nav-logo">
-            <img src="movies-assets/netflix-avatar.png" alt="" class="nav-avatar">
-        </div>
-    </nav>
-    <header class="banner">
-        <div class=banner-contents>
-            <h1 class="banner-title">Castlevania</h1>
-            <div class="banner-buttons">
-                <button class="banner-button">Play</button>
-                <button class="banner-button">My List</button>
+    <header>
+        <div class="nav container">
+            <a href="index.html" class="logo">
+                <img src="movies-assets/movies-logo.png" alt="">
+            </a>
+            <div class="searchbox">
+                <input type="search" id="search-input" placeholder="Search">
+                <i class='bx bx-search-alt'></i>
             </div>
-            <h1 class="banner-desc">
-                A vampire hunter fights to save a besieged city from an army of otherworldly beasts controlled by
-                Dracula himself. Inspired by the classic video games.
-            </h1>
+            <a href="¨#" class="user">
+                <img src="movies-assets/2avatar.png" alt="" class="user-img">
+            </a>
+            <div class="navbar">
+                <a href="#home" class="nav-link nav-active">
+                    <i class='bx bx-home-alt'></i>
+                    <span class="nav-link-title">Home</span>
+                </a>
+                <a href="#home" class="nav-link">
+                    <i class='bx bxs-category'></i>
+                    <span class="nav-link-title">Categories</span>
+                </a>
+                <a href="#home" class="nav-link">
+                    <i class='bx bxs-heart'></i>
+                    <span class="nav-link-title">Favorites</span>
+                </a>
+                <a href="#home" class="nav-link">
+                    <i class='bx bx-list-check'></i>
+                    <span class="nav-link-title">My List</span>
+                </a>
+                <a href="#home" class="nav-link">
+                    <i class='bx bxs-hot'></i>
+                    <span class="nav-link-title">Trending</span>
+                </a>
+                <a href="#home" class="nav-link">
+                    <i class='bx bxs-bell'></i>
+                    <span class="nav-link-title">Notifications</span>
+                </a>
+            </div>
         </div>
-        <div class="banner-fadebottom"></div>
     </header>
-    <div class="row">
-        <h2>For you</h2>
-        <div class="row-movies">
-            <img src="movies-assets/aliceinborderland-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/sweethome-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/devilmancrybaby-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/stranger-things-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/The-Conjuring-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/large-movie-3.jpg" alt="" class="row-movie row-large-movie">
-
-            <img src="movies-assets/aliceinborderland-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/sweethome-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/devilmancrybaby-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/stranger-things-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/The-Conjuring-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/large-movie-3.jpg" alt="" class="row-movie row-large-movie">
-
-            <img src="movies-assets/aliceinborderland-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/sweethome-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/devilmancrybaby-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/stranger-things-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/The-Conjuring-large.jpg" alt="" class="row-movie row-large-movie">
-            <img src="movies-assets/large-movie-3.jpg" alt="" class="row-movie row-large-movie">
+    <section class="home container" id="home">
+        <img src="movies-assets/castlevaniamain.jpg" alt="" class="home-img">
+        <div class="home-text">
+            <h1 class="home-title">Castlevania</h1>
+            <p>4 Season out now!</p>
+            <a href="" class="watch-btn">
+                <i class='bx bx-play'></i>
+                <span>Watch it right now.</span>
+            </a>
         </div>
-    </div>
-    <div class="row">
-        <h2>Watch Again</h2>
-        <div class="row-movies">
-            <img src="movies-assets/castlevania-watch-again2.jpg" alt="" class="row-movie">
-            <img src="movies-assets/berserk-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/devilmancrybaby-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/aliceinborderland-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/supermariobros-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/adventuretime-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/spiderman-watch-again.jpg" alt="" class="row-movie">
-
-            <img src="movies-assets/castlevania-watch-again2.jpg" alt="" class="row-movie">
-            <img src="movies-assets/berserk-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/devilmancrybaby-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/aliceinborderland-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/supermariobros-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/adventuretime-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/spiderman-watch-again.jpg" alt="" class="row-movie">
-
-            <img src="movies-assets/castlevania-watch-again2.jpg" alt="" class="row-movie">
-            <img src="movies-assets/berserk-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/devilmancrybaby-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/aliceinborderland-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/supermariobros-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/adventuretime-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/spiderman-watch-again.jpg" alt="" class="row-movie">
+    </section>
+    <section class="popular container" id="pop">
+        <div class="heading">
+            <h2 class="heading-title">Popular Movies</h2>
         </div>
-    </div>
-    <div class="row">
-        <h2>Watch Again</h2>
-        <div class="row-movies">
-            <img src="movies-assets/castlevania-watch-again2.jpg" alt="" class="row-movie">
-            <img src="movies-assets/berserk-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/devilmancrybaby-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/aliceinborderland-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/supermariobros-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/adventuretime-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/spiderman-watch-again.jpg" alt="" class="row-movie">
-
-            <img src="movies-assets/castlevania-watch-again2.jpg" alt="" class="row-movie">
-            <img src="movies-assets/berserk-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/devilmancrybaby-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/aliceinborderland-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/supermariobros-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/adventuretime-watch-again.jpg" alt="" class="row-movie">
-            <img src="movies-assets/spiderman-watch-again.jpg" alt="" class="row-movie">
-        </div>
+    </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
