finishing the main page of the website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="swiper bundle/swiper-bundle.min.css">
     <title>Movies+</title>
 </head>
 
@@ -56,17 +57,400 @@
         <div class="home-text">
             <h1 class="home-title">Castlevania</h1>
             <p>4 Season out now!</p>
-            <a href="" class="watch-btn">
+            <a href="#" class="watch-btn">
                 <i class='bx bx-play'></i>
                 <span>Watch it right now.</span>
             </a>
         </div>
     </section>
-    <section class="popular container" id="pop">
+    <section class="popular container" id="popular">
         <div class="heading">
             <h2 class="heading-title">Popular Movies</h2>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+
+
+        <div class="popular-content swiper">
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/spiderman-no-way-home.jpg  " alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Spider-Man: No Way Home</h2>
+                            <span class="movie-type">Action</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/hellsing.jpg
+                        " alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Hellsing</h2>
+                            <span class="movie-type">Action, Fantasy</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/berserk-large.jpg" alt="">
+                        <div class="box-text">
+                            <h2 class="movie-title">Berserk</h2>
+                            <span class="movie-type">Dark Fantasy, Action</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/large-movie-3.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Peaky Blinders</h2>
+                            <span class="movie-type">Fiction, Drama, Thriller</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/The-Conjuring-large.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">The Conjuring</h2>
+                            <span class="movie-type">Horror</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/sweethome-large.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Sweet Home</h2>
+                            <span class="movie-type">Drama</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/devilmancrybaby-large.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Devilman Crybaby</h2>
+                            <span class="movie-type">Dark Fantasy, Action</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/aliceinborderland-large.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Alice in Borderland</h2>
+                            <span class="movie-type">Suspense, Fiction, Survival, Drama</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/stranger-things-large.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Stranger Things</h2>
+                            <span class="movie-type">Action</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </section>
+    <section class="movies container" id="movies">
+        <h2 class="heading-title">Movies and Shows</h2>
+        <div class="movies-content">
+            <div class="swiper-slide">
+                <div class="movie-box">
+                    <img src="movies-assets/adventuretime-watch-again.jpg" alt="" class="movie-box-img">
+                    <div class="box-text">
+                        <h2 class="movie-title">Adventure Time</h2>
+                        <span class="movie-type">Action</span>
+                        <a href="#" class="watch-btn play-btn">
+                            <i class='bx bx-play'></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="movie-box">
+                    <img src="movies-assets/berserk-watch-again.jpg" alt="" class="movie-box-img">
+                    <div class="box-text">
+                        <h2 class="movie-title">Berserk</h2>
+                        <span class="movie-type">Action</span>
+                        <a href="#" class="watch-btn play-btn">
+                            <i class='bx bx-play'></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="movie-box">
+                    <img src="movies-assets/regular-show.jpg" alt="" class="movie-box-img">
+                    <div class="box-text">
+                        <h2 class="movie-title">Regular Show</h2>
+                        <span class="movie-type">Action</span>
+                        <a href="#" class="watch-btn play-btn">
+                            <i class='bx bx-play'></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="movie-box">
+                    <img src="movies-assets/rick-and-morty.jpg" alt="" class="movie-box-img">
+                    <div class="box-text">
+                        <h2 class="movie-title">Rick And Morty</h2>
+                        <span class="movie-type">Action</span>
+                        <a href="#" class="watch-btn play-btn">
+                            <i class='bx bx-play'></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="movie-box">
+                    <img src="movies-assets/adventuretime-watch-again.jpg" alt="" class="movie-box-img">
+                    <div class="box-text">
+                        <h2 class="movie-title">Adventure Time</h2>
+                        <span class="movie-type">Action</span>
+                        <a href="#" class="watch-btn play-btn">
+                            <i class='bx bx-play'></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="movie-box">
+                    <img src="movies-assets/berserk-watch-again.jpg" alt="" class="movie-box-img">
+                    <div class="box-text">
+                        <h2 class="movie-title">Berserk</h2>
+                        <span class="movie-type">Action</span>
+                        <a href="#" class="watch-btn play-btn">
+                            <i class='bx bx-play'></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="movie-box">
+                    <img src="movies-assets/regular-show.jpg" alt="" class="movie-box-img">
+                    <div class="box-text">
+                        <h2 class="movie-title">Regular Show</h2>
+                        <span class="movie-type">Action</span>
+                        <a href="#" class="watch-btn play-btn">
+                            <i class='bx bx-play'></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="movie-box">
+                    <img src="movies-assets/rick-and-morty.jpg" alt="" class="movie-box-img">
+                    <div class="box-text">
+                        <h2 class="movie-title">Rick And Morty</h2>
+                        <span class="movie-type">Action</span>
+                        <a href="#" class="watch-btn play-btn">
+                            <i class='bx bx-play'></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="see-more">
+            <a href="#" class="see-more-btn">See More</a>
+        </div>
+    </section>
+    <section class="popular container" id="popular">
+        <div class="heading">
+            <h2 class="heading-title">Watch Later</h2>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+
+
+        <div class="popular-content swiper">
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/spiderman-no-way-home.jpg  " alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Spider-Man: No Way Home</h2>
+                            <span class="movie-type">Action</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/hellsing.jpg
+                        " alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Hellsing</h2>
+                            <span class="movie-type">Action, Fantasy</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/berserk-large.jpg" alt="">
+                        <div class="box-text">
+                            <h2 class="movie-title">Berserk</h2>
+                            <span class="movie-type">Dark Fantasy, Action</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/large-movie-3.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Peaky Blinders</h2>
+                            <span class="movie-type">Fiction, Drama, Thriller</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/The-Conjuring-large.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">The Conjuring</h2>
+                            <span class="movie-type">Horror</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/sweethome-large.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Sweet Home</h2>
+                            <span class="movie-type">Drama</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/devilmancrybaby-large.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Devilman Crybaby</h2>
+                            <span class="movie-type">Dark Fantasy, Action</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/aliceinborderland-large.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Alice in Borderland</h2>
+                            <span class="movie-type">Suspense, Fiction, Survival, Drama</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide">
+                    <div class="movie-box">
+                        <img src="movies-assets/stranger-things-large.jpg" alt="" class="movie-box-img">
+                        <div class="box-text">
+                            <h2 class="movie-title">Stranger Things</h2>
+                            <span class="movie-type">Action</span>
+                            <a href="#" class="watch-btn play-btn">
+                                <i class='bx bx-play'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&#169; Dev.Luccas All Right Reserved<br>777-777-777</p>
+        </div>
+    </section>
+    <script src="swiper bundle/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
 
